<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeWifiHK</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="about_freewifihk">About FreeWifiHK</string>
    <string name="description">Discover free Wi-Fi hotspots in Hong Kong</string>
    <string name="source">Source</string>
    <string name="source_summary">FreeWifiHK is open source software</string>
    <string name="author">Author</string>
    <string name="author_summary">onarray</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Like what you see? We need your help!</string>
    <string name="issues">Issues</string>
    <string name="issues_summary">Spotted an issue? Report it on our issue tracker</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Email us on contact@freewifihk.com</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_summary">Tweet us on @freewifihk</string>

</resources>